feat: mark routes as ApiBearerAuth
